--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -3,3 +3,15 @@
 html {
   font-family: sans-serif;
 }
+
+#preload {}
+
+#anleitung {
+  visibility: none;
+}
+#anleitung {
+  visibility: none;
+}
+#game {
+  visibility: none;
+}
