--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -2,7 +2,7 @@
 
 html {
   font-family: sans-serif;
-  margin: 5em;
+  /* margin: 5em; */
   /*background-color: red;*/
   position: absolute;
 }
@@ -14,7 +14,7 @@ html {
 
 #anleitung {
   visibility: none;
-  width:100%;
+  width:75%;
 }
 #anleitung {
   visibility: none;
